# embedded_resource_test

./: CMakeLists.txt  main.cpp
res/: sample.txt
